# orderServices/endpoints.js
@@ -50,9 +50,16 @@ module.exports = function (app) {
         return res.status(500)
     })
 
-    app.get('/order/find-order-by-customerId', (req, res) =>{
+    app.post('/order/find-order-by-customerId', (req, res) =>{
         // #swagger.tags= ['order']
-                /* #swagger.parameters['customerId'] = {description: "enter customerId"} */
+        /* #swagger.parameters[newOrder] = {
+            in: 'body',
+            required: true,
+            type: 'object',
+            schema: {
+                  "customerId" : "cust2"
+            }
+        } */
         const newOrder = req.body
         if(false)
         return res.status(404).send(false)
@@ -62,17 +69,24 @@ module.exports = function (app) {
         return res.status(500)
     })
 
-    // app.get('/order/find-order-by-id', (req, res) =>{
-    //      // #swagger.tags= ['order']
-    //     /* #swagger.parameters['orderId'] = {description: "enter orderID"} */
-    //     const newCustomer = req.body
-    //     if(false)
-    //     return res.status(404).send(false)
-    //     else {
-    //         return res.status(200).send(data)
-    //     }
-    //     return res.status(500)
-    // })
+    app.post('/order/find-order-by-id', (req, res) =>{
+         // #swagger.tags= ['order']
+          /* #swagger.parameters[newOrder] = {
+            in: 'body',
+            required: true,
+            type: 'object',
+            schema: {
+                    "id": "6108f2a804457a3f14d57c6e"
+            }
+        } */
+        const newCustomer = req.body
+        if(false)
+        return res.status(404).send(false)
+        else {
+            return res.status(200).send(data)
+        }
+        return res.status(500)
+    })
 
     app.delete('/order/delete', (req, res) =>{
         // #swagger.tags= ['order']
